tests/invalid/UnionType_Invalid_23.whiley
type named is null | int[]

function f(named f) -> (named r):
    f[0] = 1
    return f